fix schedule cosult buttton on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -68,11 +68,13 @@ header.row {
 
 #small-contact {
 	display: none;
+	font-size: 1.2em; 
+	margin-top:10px; 
+	padding: 13px; 
+	border-radius: 50px;
+	font-weight: 100;
+	background-color: #1bb0c5;
 }
-
-
-
-
 
 	/* Logo */
 
@@ -258,17 +260,17 @@ button {
 
 @media screen and (max-width: 880px) {
 	.lawOffice {
-		font-size: 0.7em;
+		font-size: 1em;
 	}
 	.first {
-		font-size: 1.2em;
+		font-size: 1.4em;
 	}
 
 	.navbar-height {
 		height: 75px;
 	}
 	.name {
-		font-size: 2.1em;
+		font-size: 2.5em;
 	}
 	.logo {
 		max-width: 100%;
@@ -295,20 +297,31 @@ button {
 	}
 }
 
+@media screen and (max-width: 500px) {
+	.name {
+		font-size: 2.2em;
+	}
+}
+
 @media screen and (max-width: 460px){
 	.lawOffice {
-		font-size: 0.6em;
+		font-size: 0.8em;
 	}
 	.first {
-		font-size: 1.1em;
+		font-size: 1.3em;
 	}
 	.name {
-		font-size: 1.9em;
+		font-size: 2.2em;
 	}
 }
 
 @media screen and (max-width: 420px){
 	.name {
-		font-size: 1.5em;
+		font-size: 2em;
+	}
+}
+@media screen and (max-width: 390px){
+	.name {
+		font-size: 1.8em;
 	}
 }
